--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ pathspec==0.10.2
 platformdirs==2.5.4
 pycodestyle==2.10.0
 pyflakes==3.0.0
+python-dotenv==0.21.0
 pytz==2022.6
 sqlparse==0.4.3
 tomli==2.0.1
