--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ click==8.1.3
 Django==4.1.3
 django-filter==22.1
 djangorestframework==3.14.0
+Faker==15.3.3
 flake8==6.0.0
 Markdown==3.4.1
 mccabe==0.7.0
@@ -13,7 +14,9 @@ pathspec==0.10.2
 platformdirs==2.5.4
 pycodestyle==2.10.0
 pyflakes==3.0.0
+python-dateutil==2.8.2
 python-dotenv==0.21.0
 pytz==2022.6
+six==1.16.0
 sqlparse==0.4.3
 tomli==2.0.1
