atualiza .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-SECRET_KEY = 'Django\'s secret key'
+SECRET_KEY = '67%rm+bkw%1%31wc1m$+l)1t3fk0hoym2x*6%b3-iq)iu5%%$+'
 DB_NAME = 'my_db'
 DB_USER = 'root'
 DB_PASSWORD = '12345'
